--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,19 +19,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install ESLint
-        run: |
-          npm install eslint
-          npm install @microsoft/eslint-formatter-sarif
+      # - name: Install ESLint
+      #   run: |
+      #     npm install eslint
+      #     npm install @microsoft/eslint-formatter-sarif
 
       - name: Run ESLint
         env:
           SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
-        run: npx eslint .
-          --config .eslintrc.js
-          --ext .js,.jsx,.ts,.tsx
-          --format @microsoft/eslint-formatter-sarif
-          --output-file eslint-results.sarif
+        run: npm run lint
+        # run: npx eslint .
+        #   --config .eslintrc.js
+        #   --ext .js,.jsx,.ts,.tsx
+        #   --format @microsoft/eslint-formatter-sarif
+        #   --output-file eslint-results.sarif
         continue-on-error: true
 
       - name: Upload analysis results to GitHub
